fix 2. add ValidUser test.